--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" media="screen" href="screen.css" type="text/css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet" />
   <link rel="icon" href="" />
